tokio-fsm-macros/tests/ui/timeout_without_handler.stderr
error: #[state_timeout] requires an #[on_timeout] handler
  --> tests/ui/timeout_without_handler.rs:10:14
   |
10 |     async fn start(&mut self) -> Transition<Idle> {
   |              ^^^^^

warning: unused import: `Transition`
 --> tests/ui/timeout_without_handler.rs:1:17
  |
1 | use tokio_fsm::{Transition, fsm};
  |                 ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
